# Fishly-API

./: app.py  pyproject.toml  requirements.txt  rzp.csv
src/db/: orders_db.py  products_db.py  setup_db.py  user_db.py
src/routes/admin/: admin.py
src/routes/login/: login.py
src/routes/payment/: payment.py
src/routes/products/: products.py
src/routes/user/: user.py
