[tool.poetry]
name = "Fishie"
version = "0.1.0"
description = "An Ecommerce platform that sells freshwater fish"
authors = ["Sai-2002 <smnjr2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^5.0.0"
pymongo = "^4.10.1"
jsonify = "^0.5"
razorpay = "^1.4.2"
flask-jwt-extended = "^4.6.0"
setuptools = "^75.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
